# pysnappy

./: CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml  pysnappy.pyx  pysnappy_c.pxd  setup.py  tox.ini
.github/workflows/: ci.yml  release.yml
pysnappy/: cli.py  core.c  core.pxd  core.pyx  crc32c.c  crc32c.pyx  framing.c  framing.pyx  pysnappy.c  pysnappy.pyx  snappy.pxd
src/pysnappy/: __init__.py  cli.py  core.pxd  core.pyx  crc32c.pxd  crc32c.pyx  framing.pxd  framing.pyx
tests/: __init__.py  iris.csv.raw  iris.framing2.sz  iris.hadoop.snappy  test_pysnappy.py  tests.py
