[project]
name = "pysnappy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Evan McClain", email = "aeroevan@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
build.verbose = true


[build-system]
requires = ["scikit-build-core>=0.10", "cython"]
build-backend = "scikit_build_core.build"
