[project]
name = "pysnappy"
version = "0.7.0"
description = "Cython wrapper around Google's Snappy compression library, with pure-Cython implementations of the framing2 (.sz) and Hadoop framing formats and CRC32C."
readme = "README.md"
authors = [
    { name = "Evan McClain", email = "aeroevan@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
build.verbose = true


[build-system]
requires = ["scikit-build-core>=0.10", "cython"]
build-backend = "scikit_build_core.build"
